neon-frames handled with css for better performance

--- a/frontend/service/components/home/home.html
+++ b/frontend/service/components/home/home.html
@@ -3,7 +3,7 @@
 	<div id="chose-game" style="display: block;">
 		<div class="row">
 			<div class="col-12 mb-4">
-				<h2 class="text-center ctm-text-light p-5" id="neon-text">What would you like to play?</h2>
+				<h2 class="text-center ctm-text-light p-5 neon-text" id="neon-text">What would you like to play?</h2>
 			</div>
 		</div>
 		<div class="row justify-content-center">
