--- a/frontend/service/components/index/index.html
+++ b/frontend/service/components/index/index.html
@@ -5,7 +5,7 @@
               <div class="col-12 col-md-6 d-flex flex-column me-md-4 mb-4 mb-md-0">
                   <h1 class="ctm-text-title d-none d-md-block">ft_transcendence</h1> <!-- Hide on mobile -->
                   <h3 class="ctm-text-light mb-5 text-center text-md-start">Welcome, huuman</h3>
-                  <h4 class="ctm-text-light mt-auto" id="neon-text">
+                  <h4 class="ctm-text-light mt-auto neon-text" id="neon-text">
                   <a href="/login" class="nav-link ctm-link text-center">please, log in to start playing</a>
                   </h4>
               </div>
