--- a/frontend/service/components/profile/profile.html
+++ b/frontend/service/components/profile/profile.html
@@ -7,7 +7,7 @@
                 <div class="row justify-content-center">
                     <div class="col-md-6 text-center">
                         <div class="profile-picture-container mb-3">
-                            <img id="profile-picture" alt="profile picture" class="img-fluid ctm-img">
+                            <img src="../../resources/avatar/avatar_1.png" id="profile-picture" alt="profile picture" class="img-fluid ctm-img">
                             <button id="change-picture" class="btn">Change</button>
                         </div>
                         <h4 class="ctm-text-title mb-2">User data</h4>
@@ -17,7 +17,7 @@
                         </p>
                         <p class="d-flex justify-content-between mb-1">
                             <span class="fw-bold">Alias:</span>
-                            <span id="alias">Patata</span>
+                            <span id="alias"></span>
                         </p>
                         <p class="d-flex justify-content-between mb-1">
                             <span class="fw-bold">Friends:</span>
