--- a/frontend/service/components/settings/settings.html
+++ b/frontend/service/components/settings/settings.html
@@ -1,24 +1,26 @@
-<div class="settings-container blinking-neon-frame p-0 p-md-3 w-75">
-    <div class="card ctm-card ctm-text-light">
-        <button id="cancel-changes" class="btn cancel-btn position-absolute top-0 end-0 m-2">x</button>
-        <div class=""> <!-- card-header -->
-            <h2 class="mb-0 ctm-text-title text-center">Settings</h2>
-        </div>
-        <div class="card-body">
-            <div class="accordion" id="settingsAccordion">
-                <!-- Security Section -->
-                <div class="accordion-item">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#securitySettings">
-                            Security Settings
-                        </button>
-                    </h2>
-                    <div id="securitySettings" class="accordion-collapse collapse show" data-bs-parent="#settingsAccordion">
-                        <div class="accordion-body">
-                            <div class="list-group list-group-flush">
-                                <!-- 2FA -->
-                                <div class="list-group-item d-flex flex-column">
-                                    <span>Two-Factor Authentication (2FA)</span>
+<div class="container d-flex justify-content-center align-items-center">
+
+    <div class="settings-container blinking-neon-frame p-0 p-md-3  w-75 ">
+        <div class="card ctm-card ctm-text-light">
+            <button id="cancel-changes" class="btn cancel-btn position-absolute top-0 end-0 m-2">x</button>
+            <div class=""> <!-- card-header -->
+                <h2 class="mb-0 ctm-text-title text-center">Settings</h2>
+            </div>
+            <div class="card-body">
+                <div class="accordion" id="settingsAccordion">
+                    <!-- Security Section -->
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#securitySettings">
+                                Security Settings
+                            </button>
+                        </h2>
+                        <div id="securitySettings" class="accordion-collapse collapse show" data-bs-parent="#settingsAccordion">
+                            <div class="accordion-body">
+                                <div class="list-group list-group-flush">
+                                    <!-- 2FA -->
+                                    <div class="list-group-item d-flex flex-column">
+                                        <span>Two-Factor Authentication (2FA)</span>
                                         <div class="d-flex mt-2">
                                             <label id="2fa-status" for="2fa-toggle" class="flex-grow-1">enable 2FA</label>
                                             <div class="form-check form-switch">
@@ -26,102 +28,103 @@
                                                 <label class="form-check-label" for="2fa-toggle"></label>
                                             </div>
                                         </div>
+                                    </div>
+                                    <!-- Change Password -->
+                                    <div class="list-group-item">
+                                        <div class="form-group mt-0">
+                                            <div class="d-flex justify-content-between align-items-center">
+                                                <label for="change-password-toggle" class="flex-grow-1">Change Password</label>
+                                                <div class="form-check form-switch">
+                                                    <input class="form-check-input" type="checkbox" id="change-password-toggle" data-bs-toggle="collapse" data-bs-target="#change-password-form">
+                                                    <label class="form-check-label" for="change-password-toggle"></label>
+                                                </div>
+                                            </div>
+                                            <form id="change-password-form" class="collapse mt-2">
+                                                <input type="password" id="current-password" class="password-field form-control ctm-form mb-2" placeholder="Actual Password">
+                                                <input type="password" id="new-password" class="password-field form-control ctm-form mb-2 mb-2" placeholder="New Password">
+                                                <input type="password" id="confirm-new-password" class="password-field form-control ctm-form mb-2 mb-2" placeholder="Confirm Password">
+                                                <div class="d-flex justify-content-center">
+                                                    <button type="submit" id="change-password-btn" class="btn ctm-btn mt-2">Change Password</button>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>
                                 </div>
-                                <!-- Change Password -->
-                                <div class="list-group-item">
-                                <div class="form-group mt-0">
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <label for="change-password-toggle" class="flex-grow-1">Change Password</label>
-                                        <div class="form-check form-switch">
-                                            <input class="form-check-input" type="checkbox" id="change-password-toggle" data-bs-toggle="collapse" data-bs-target="#change-password-form">
-                                            <label class="form-check-label" for="change-password-toggle"></label>
-                                        </div>
-                                    </div>
-                                    <form id="change-password-form" class="collapse mt-2">
-                                        <input type="password" id="current-password" class="password-field form-control ctm-form mb-2" placeholder="Actual Password">
-                                        <input type="password" id="new-password" class="password-field form-control ctm-form mb-2 mb-2" placeholder="New Password">
-                                        <input type="password" id="confirm-new-password" class="password-field form-control ctm-form mb-2 mb-2" placeholder="Confirm Password">
-                                        <div class="d-flex justify-content-center">
-                                            <button type="submit" id="change-password-btn" class="btn ctm-btn mt-2">Change Password</button>
-                                        </div>
-                                    </div>
-                                </form>
                             </div>
+                        </div>
+                    </div>
+                    <!-- Account Section -->
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accountSettings">
+                                Account Settings
+                            </button>
+                        </h2>
+                        <div id="accountSettings" class="accordion-collapse collapse" data-bs-parent="#settingsAccordion">
+                            <div class="accordion-body">
+                                <div class="list-group list-group-flush">
+                                    <!-- Change Username -->
+                                    <div class="list-group-item">
+                                        <h5>Change Username</h5>
+                                        <form id="new-username-form" class="mt-3">
+                                            <div class="input-group">
+                                                <input type="text" id="new-username" class="form-control ctm-form" placeholder="New username">
+                                                <button type="submit" id="check-username-availability" class="btn send-btn" title="Check availability">
+                                                    <i class="fas fa-check"></i>
+                                                </button>
+                                            </div>
+                                        </form>
+                                    </div>
+                                    <!-- Change Email -->
+                                    <div class="list-group-item">
+                                        <h5>Change Email</h5>
+                                        <form id="new-email-form" class="mt-3">
+                                            <div class="input-group">
+                                                <input type="email" id="new-email" class="form-control ctm-form" placeholder="New email">
+                                                <button type="submit" id="check-email-availability" class="btn send-btn" title="Confirm Email Change">
+                                                    <i class="fas fa-check"></i>
+                                                </button>
+                                            </div>
+                                        </form>
+                                    </div>
+                                    <!-- Delete Account -->
+                                    <div class="list-group-item ">
+                                        <h5 class="ctm-text-danger">Delete Account</h5>
+                                        <form id="delete-account-form" class="mt-3 text-center">
+                                            <input type="password" id="delete-password" class="password-field form-control ctm-form mb-2" placeholder="Enter password">
+                                            <button type="submit" class="btn ctm-btn-danger" id="delete-account-btn" >Delete Account</button>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Blocked Users Section -->
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#blockedUsers">
+                                Blocked Users
+                            </button>
+                        </h2>
+                        <div id="blockedUsers" class="accordion-collapse collapse" data-bs-parent="#settingsAccordion">
+                            <div class="accordion-body">
+                                <div id="blocked-users-list">
+                                    <!-- Blocked users will be dynamically added here -->
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!-- Account Section -->
-                <div class="accordion-item">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accountSettings">
-                            Account Settings
-                        </button>
-                    </h2>
-                    <div id="accountSettings" class="accordion-collapse collapse" data-bs-parent="#settingsAccordion">
-                        <div class="accordion-body">
-                            <div class="list-group list-group-flush">
-                                <!-- Change Username -->
-                                <div class="list-group-item">
-                                    <h5>Change Username</h5>
-                                    <form id="new-username-form" class="mt-3">
-                                        <div class="input-group">
-                                            <input type="text" id="new-username" class="form-control ctm-form" placeholder="New username">
-                                            <button type="submit" id="check-username-availability" class="btn send-btn" title="Check availability">
-                                                <i class="fas fa-check"></i>
-                                            </button>
-                                        </div>
-                                    </form>
-                                </div>
-                                <!-- Change Email -->
-                                <div class="list-group-item">
-                                    <h5>Change Email</h5>
-                                    <form id="new-email-form" class="mt-3">
-                                        <div class="input-group">
-                                            <input type="email" id="new-email" class="form-control ctm-form" placeholder="New email">
-                                            <button type="submit" id="check-email-availability" class="btn send-btn" title="Confirm Email Change">
-                                                <i class="fas fa-check"></i>
-                                            </button>
-                                        </div>
-                                    </form>
-                                </div>
-                            <!-- Delete Account -->
-                            <div class="list-group-item ">
-                                <h5 class="ctm-text-danger">Delete Account</h5>
-                                <form id="delete-account-form" class="mt-3 text-center">
-                                    <input type="password" id="delete-password" class="password-field form-control ctm-form mb-2" placeholder="Enter password">
-                                    <button type="submit" class="btn ctm-btn-danger" id="delete-account-btn" >Delete Account</button>
-                                </form>
-                            </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Blocked Users Section -->
-                <div class="accordion-item">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#blockedUsers">
-                            Blocked Users
-                        </button>
-                    </h2>
-                    <div id="blockedUsers" class="accordion-collapse collapse" data-bs-parent="#settingsAccordion">
-                        <div class="accordion-body">
-                            <div id="blocked-users-list">
-                                <!-- Blocked users will be dynamically added here -->
-                            </div>
-                        </div>
-                    </div>
+                <!-- Save Changes Button -->
+                <div class="mt-4 text-center">
+                    <button class="btn ctm-btn" id="save-changes-btn" disabled>Save Changes</button>           
                 </div>
             </div>
-            <!-- Save Changes Button -->
-            <div class="mt-4 text-center">
-                <button class="btn ctm-btn" id="save-changes-btn" disabled>Save Changes</button>           
-            </div>
-    </div>
+        </div>
+        
 </div>
-
-<!-- Delete Profile Modal -->
-<div class="modal fade" id="delete-profile-modal" tabindex="-1" aria-labelledby="delete-profile-modal-label" aria-hidden="true">
+        <!-- Delete Profile Modal -->
+        <div class="modal fade" id="delete-profile-modal" tabindex="-1" aria-labelledby="delete-profile-modal-label" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
