--- a/frontend/service/components/settings/settings.html
+++ b/frontend/service/components/settings/settings.html
@@ -157,12 +157,12 @@
                 <div id="otp-form" class="mt-3 otp-form" style="display: none;">
                     <p class="ms-2">OTP is required to deactivate the 2FA</p>
                     <div class="d-flex justify-content-center my-2 w-100">
-                        <input type="text" class="form-control ctm-form otp-input" maxlength="1" required>
-                        <input type="text" class="form-control ctm-form otp-input" maxlength="1" required>
-                        <input type="text" class="form-control ctm-form otp-input me-3" maxlength="1" required>
-                        <input type="text" class="form-control ctm-form otp-input ms-3" maxlength="1" required>
-                        <input type="text" class="form-control ctm-form otp-input" maxlength="1" required>
-                        <input type="text" class="form-control ctm-form otp-input" maxlength="1" required>
+                        <input type="text" name="otp-1" class="form-control ctm-form otp-input" maxlength="1" required>
+                        <input type="text" name="otp-2" class="form-control ctm-form otp-input" maxlength="1" required>
+                        <input type="text" name="otp-3" class="form-control ctm-form otp-input me-3" maxlength="1" required>
+                        <input type="text" name="otp-4" class="form-control ctm-form otp-input ms-3" maxlength="1" required>
+                        <input type="text" name="otp-5" class="form-control ctm-form otp-input" maxlength="1" required>
+                        <input type="text" name="otp-6" class="form-control ctm-form otp-input" maxlength="1" required>
                     </div>
                 </div>
             </div>
