added quick game invitations on cache system for less fetches on chat

--- a/frontend/service/components/home/home.html
+++ b/frontend/service/components/home/home.html
@@ -26,7 +26,7 @@
 							</div>
 							<div id="friend-list" class="h-100 flex-column" style="display: none;">
 								<h5 class="ctm-text-light mb-3">Select a friend to play with:</h5>
-								<div id="friends-container" class="mb-3 friends-container"></div>
+								<div id="pong-friends-container" class="mb-3 friends-container"></div>
 								<button data-action="start-game"id="start-game-with-friend" class="btn ctm-btn mb-3" disabled>Start game with friend</button>
 							</div>
 							<div id="tournament-options" class="h-100 flex-column" style="display: none;">
