some more fixes

--- a/frontend/service/components/chess/chess.html
+++ b/frontend/service/components/chess/chess.html
@@ -63,22 +63,20 @@
       <button id="cancel-settings" class="btn ctm-btn-secondary">Cancel</button>
     </div>
   </div>
-
-
-<div class="modal fade" id="chess-resign-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title ctm-text-title" id="exampleModalLabel">Resign</h5>
-				<button type="button" class="close-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
-			</div>
-			<div class="modal-body">
-				You're about to resign, are you sure?
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn ctm-btn" data-bs-dismiss="modal">Cancel</button>
-				<button id="resign-button" type="button" class="btn ctm-btn-danger" data-bs-dismiss="modal">Resign</button>
-			</div>
-		</div>
-	</div>
+<div class="modal fade" id="chess-resign-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-bs-backdrop="static">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title ctm-text-title" id="exampleModalLabel">Resign</h5>
+                <button type="button" class="close-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
+            </div>
+            <div class="modal-body">
+                You're about to resign, are you sure?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn ctm-btn" data-bs-dismiss="modal">Cancel</button>
+                <button id="resign-button" type="button" class="btn ctm-btn-danger" data-bs-dismiss="modal">Resign</button>
+            </div>
+        </div>
+    </div>
 </div>
