cache system for tournament invitations too

--- a/frontend/service/components/settings/settings.html
+++ b/frontend/service/components/settings/settings.html
@@ -2,7 +2,7 @@
 
     <div class="settings-container blinking-neon-frame p-0 p-md-3  w-75 ">
         <div class="card ctm-card ctm-text-light">
-            <button id="cancel-changes" class="btn cancel-btn position-absolute top-0 end-0 m-2">x</button>
+            <!-- <button id="cancel-changes" class="btn cancel-btn position-absolute top-0 end-0 m-2">x</button> -->
             <div class=""> <!-- card-header -->
                 <h2 class="mb-0 ctm-text-title text-center">Settings</h2>
             </div>
