--- a/frontend/service/components/login/login.html
+++ b/frontend/service/components/login/login.html
@@ -15,7 +15,7 @@
                 <div class="d-flex justify-content-center flex-column">
                     <div class="d-flex justify-content-center w-100">
                         <button type="submit" class="btn ctm-btn w-50 flex-grow-1" id="submit">Submit</button>
-                        <div class="text-center ctm-text-light p-1">or</div>
+                        <!-- <div class="text-center ctm-text-light p-1">or</div> -->
                         <!-- <button id="login42-button" class="btn ctm-btn w-50 flex-grow-1">Login with 42</button> -->
                     </div>
                     <div class="d-flex justify-content-center mt-3 w-100">
@@ -55,14 +55,14 @@
             <div class="modal-body">
                 <form id="otp-form">
                     <div class="mb-3 d-flex flex-column justify-content-center">
-                        <label for="otp-code" class=" ms-1 form-label ctm-text-light"><h5>Please, enter your OTP Code: </h5></label>
+                        <p class=" ms-1 form-label ctm-text-light"><h5>Please, enter your OTP Code: </h5></p>
                         <div class="d-flex justify-content-center my-3">
-                            <input type="text" class="form-control ctm-form otp-input" maxlength="1" required>
-                            <input type="text" class="form-control ctm-form otp-input" maxlength="1" required>
-                            <input type="text" class="form-control ctm-form otp-input me-3" maxlength="1" required>
-                            <input type="text" class="form-control ctm-form otp-input ms-3" maxlength="1" required>
-                            <input type="text" class="form-control ctm-form otp-input" maxlength="1" required>
-                            <input type="text" class="form-control ctm-form otp-input" maxlength="1" required>
+                            <input type="text" name="otp-1" class="form-control ctm-form otp-input" maxlength="1" required>
+                            <input type="text" name="otp-2" class="form-control ctm-form otp-input" maxlength="1" required>
+                            <input type="text" name="otp-3" class="form-control ctm-form otp-input me-3" maxlength="1" required>
+                            <input type="text" name="otp-4" class="form-control ctm-form otp-input ms-3" maxlength="1" required>
+                            <input type="text" name="otp-5" class="form-control ctm-form otp-input" maxlength="1" required>
+                            <input type="text" name="otp-6" class="form-control ctm-form otp-input" maxlength="1" required>
                         </div>
                     </div>
                     <div class="modal-footer">
