--- a/frontend/service/components/settings/settings.html
+++ b/frontend/service/components/settings/settings.html
@@ -1,8 +1,7 @@
 <div class="container d-flex justify-content-center align-items-center">
 
-    <div class="settings-container blinking-neon-frame p-0 p-md-3  w-75 ">
+    <div class="settings-container blinking-neon-frame p-0 p-md-3 w-75">
         <div class="card ctm-card ctm-text-light">
-            <!-- <button id="cancel-changes" class="btn cancel-btn position-absolute top-0 end-0 m-2">x</button> -->
             <div class=""> <!-- card-header -->
                 <h2 class="mb-0 ctm-text-title text-center">Settings</h2>
             </div>
@@ -22,7 +21,7 @@
                                     <div class="list-group-item d-flex flex-column">
                                         <span>Two-Factor Authentication (2FA)</span>
                                         <div class="d-flex mt-2">
-                                            <label id="2fa-status" for="2fa-toggle" class="flex-grow-1">enable 2FA</label>
+                                            <label id="2fa-status" for="2fa-toggle" class="flex-grow-1">Enable 2FA</label>
                                             <div class="form-check form-switch">
                                                 <input class="form-check-input" type="checkbox" id="2fa-toggle">
                                                 <label class="form-check-label" for="2fa-toggle"></label>
@@ -40,14 +39,16 @@
                                                 </div>
                                             </div>
                                             <form id="change-password-form" class="collapse mt-2">
-                                                <input type="password" id="current-password" class="password-field form-control ctm-form mb-2" placeholder="Actual Password">
-                                                <input type="password" id="new-password" class="password-field form-control ctm-form mb-2 mb-2" placeholder="New Password">
-                                                <input type="password" id="confirm-new-password" class="password-field form-control ctm-form mb-2 mb-2" placeholder="Confirm Password">
+                                                <!-- Hidden username field for accessibility -->
+                                                <input type="text" id="username-hidden-change" class="d-none" autocomplete="username">
+                                                <input type="password" id="current-password" class="password-field form-control ctm-form mb-2" placeholder="Actual Password" autocomplete="current-password">
+                                                <input type="password" id="new-password" class="password-field form-control ctm-form mb-2" placeholder="New Password" autocomplete="new-password">
+                                                <input type="password" id="confirm-new-password" class="password-field form-control ctm-form mb-2" placeholder="Confirm Password" autocomplete="new-password">
                                                 <div class="d-flex justify-content-center">
                                                     <button type="submit" id="change-password-btn" class="btn ctm-btn mt-2">Change Password</button>
                                                 </div>
-                                            </div>
-                                        </form>
+                                            </form>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -68,7 +69,7 @@
                                         <h5>Change Username</h5>
                                         <form id="new-username-form" class="mt-3">
                                             <div class="input-group">
-                                                <input type="text" id="new-username" class="form-control ctm-form" placeholder="New username">
+                                                <input type="text" id="new-username" class="form-control ctm-form" placeholder="New username" autocomplete="username">
                                                 <button type="submit" id="check-username-availability" class="btn send-btn" title="Check availability">
                                                     <i class="fas fa-check"></i>
                                                 </button>
@@ -80,7 +81,7 @@
                                         <h5>Change Email</h5>
                                         <form id="new-email-form" class="mt-3">
                                             <div class="input-group">
-                                                <input type="email" id="new-email" class="form-control ctm-form" placeholder="New email">
+                                                <input type="email" id="new-email" class="form-control ctm-form" placeholder="New email" autocomplete="email">
                                                 <button type="submit" id="check-email-availability" class="btn send-btn" title="Confirm Email Change">
                                                     <i class="fas fa-check"></i>
                                                 </button>
@@ -88,11 +89,13 @@
                                         </form>
                                     </div>
                                     <!-- Delete Account -->
-                                    <div class="list-group-item ">
+                                    <div class="list-group-item">
                                         <h5 class="ctm-text-danger">Delete Account</h5>
                                         <form id="delete-account-form" class="mt-3 text-center">
-                                            <input type="password" id="delete-password" class="password-field form-control ctm-form mb-2" placeholder="Enter password">
-                                            <button type="submit" class="btn ctm-btn-danger" id="delete-account-btn" >Delete Account</button>
+                                            <!-- Hidden username field for accessibility -->
+                                            <input type="text" id="username-hidden-delete" class="d-none" autocomplete="username">
+                                            <input type="password" id="delete-password" class="password-field form-control ctm-form mb-2" placeholder="Enter password" autocomplete="current-password">
+                                            <button type="submit" class="btn ctm-btn-danger" id="delete-account-btn">Delete Account</button>
                                         </form>
                                     </div>
                                 </div>
@@ -117,80 +120,85 @@
                 </div>
                 <!-- Save Changes Button -->
                 <div class="mt-4 text-center">
-                    <button class="btn ctm-btn" id="save-changes-btn" disabled>Save Changes</button>           
+                    <button class="btn ctm-btn" id="save-changes-btn" disabled>Save Changes</button>
                 </div>
             </div>
         </div>
-        
-</div>
-        <!-- Delete Profile Modal -->
-        <div class="modal fade" id="delete-profile-modal" tabindex="-1" aria-labelledby="delete-profile-modal-label" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title ctm-text-title" id="delete-profile-modal-label">Delete Profile</h5>
-                <button type="button" class="close-modal close-qr-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
-            </div>
-            <div class="modal-body">
-                <h5>Are you sure you want to delete your profile?</h5>
-                <p>This action can't be reverted.</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button id="confirm-delete-account" type="button" class="btn btn-danger">Delete</button>
+    </div>
+
+    <!-- Delete Profile Modal -->
+    <div class="modal fade" id="delete-profile-modal" tabindex="-1" aria-labelledby="delete-profile-modal-label" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title ctm-text-title" id="delete-profile-modal-label">Delete Profile</h5>
+                    <button type="button" class="close-modal close-qr-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
+                </div>
+                <div class="modal-body">
+                    <h5>Are you sure you want to delete your profile?</h5>
+                    <p>This action can't be reverted.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button id="confirm-delete-account" type="button" class="btn btn-danger">Delete</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<!-- Save Changes Modal -->
-<div class="modal fade" id="save-changes-modal" tabindex="-1" aria-labelledby="save-changes-modal-label" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title ctm-text-title" id="save-changes-modal-label">Confirm Changes</h5>
-                <button type="button" class="close-modal close-qr-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
+    <!-- Save Changes Modal -->
+    <div class="modal fade" id="save-changes-modal" tabindex="-1" aria-labelledby="save-changes-modal-label" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title ctm-text-title" id="save-changes-modal-label">Confirm Changes</h5>
+                    <button type="button" class="close-modal close-qr-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
+                </div>
+                <div class="modal-body">
+                    <p class="ms-2">Please enter your password to save changes:</p>
+                    <form id="confirm-changes-form">
+                        <!-- Hidden username field for accessibility -->
+                        <input type="text" id="username-hidden-confirm" class="d-none" autocomplete="username">
+                        <input type="password" id="confirm-changes-password" class="password-field form-control ctm-form mx-2" placeholder="Enter your password" autocomplete="current-password">
+                        <div id="otp-form" class="mt-3 otp-form" style="display: none;">
+                            <p class="ms-2">OTP is required to deactivate the 2FA</p>
+                            <div class="d-flex justify-content-center my-2 w-100">
+                                <input type="text" name="otp-1" class="form-control ctm-form otp-input" maxlength="1" required>
+                                <input type="text" name="otp-2" class="form-control ctm-form otp-input" maxlength="1" required>
+                                <input type="text" name="otp-3" class="form-control ctm-form otp-input me-3" maxlength="1" required>
+                                <input type="text" name="otp-4" class="form-control ctm-form otp-input ms-3" maxlength="1" required>
+                                <input type="text" name="otp-5" class="form-control ctm-form otp-input" maxlength="1" required>
+                                <input type="text" name="otp-6" class="form-control ctm-form otp-input" maxlength="1" required>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer text-center">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="submit" form="confirm-changes-form" class="btn ctm-btn" id="confirm-save-changes">Save Changes</button>
+                </div>
             </div>
-            <div class="modal-body">
-                <p class="ms-2">Please enter your password to save changes:</p>
-                <input type="password" id="confirm-changes-password" class="password-field form-control ctm-form mx-2" placeholder="Enter your password">
-                <div id="otp-form" class="mt-3 otp-form" style="display: none;">
-                    <p class="ms-2">OTP is required to deactivate the 2FA</p>
-                    <div class="d-flex justify-content-center my-2 w-100">
-                        <input type="text" name="otp-1" class="form-control ctm-form otp-input" maxlength="1" required>
-                        <input type="text" name="otp-2" class="form-control ctm-form otp-input" maxlength="1" required>
-                        <input type="text" name="otp-3" class="form-control ctm-form otp-input me-3" maxlength="1" required>
-                        <input type="text" name="otp-4" class="form-control ctm-form otp-input ms-3" maxlength="1" required>
-                        <input type="text" name="otp-5" class="form-control ctm-form otp-input" maxlength="1" required>
-                        <input type="text" name="otp-6" class="form-control ctm-form otp-input" maxlength="1" required>
+        </div>
+    </div>
+
+    <!-- 2FA QR Modal -->
+    <div class="modal fade" id="2fa-qr-modal" tabindex="-1" aria-labelledby="2faQrModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title ctm-text-title" id="delete-modal-label">2FA Activation</h5>
+                    <button type="button" class="close-modal close-qr-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
+                </div>
+                <div class="modal-body">
+                    <h5>2FA enabled successfully</h5>
+                    <div>Please, read the QR or you'll be in trouble</div>
+                    <div class="d-flex align-items-center justify-content-center">
+                        <div class="qr" id="qr-place"></div>
                     </div>
                 </div>
-            </div>
-            <div class="modal-footer text-center">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="btn ctm-btn" id="confirm-save-changes">Save Changes</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-<!-- 2FA qr modal -->
-<div class="modal fade" id="2fa-qr-modal" tabindex="-1" aria-labelledby="2faQrModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title ctm-text-title" id="delete-modal-label">2FA Activation</h5>
-                <button type="button" class="close-modal close-qr-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
-            </div>
-            <div class="modal-body">
-                <h5>2FA enabled succesfully</h5>
-                <div>Please, read the QR or you'll be in trouble</div>
-                <div class="d-flex align-items-center justify-content-center">
-                    <div class="qr" id="qr-place"></div>
+                <div class="modal-footer d-flex align-items-center justify-content-center">
+                    <button type="button" id="done-button" class="btn ctm-btn close-qr-modal" data-bs-dismiss="modal" disabled>Done!</button>
                 </div>
-            </div>
-            <div class="modal-footer d-flex align-items-center justify-content-center">
-                <button type="button" id="done-button" class="btn ctm-btn close-qr-modal" data-bs-dismiss="modal" disabled>Done!</button>
             </div>
         </div>
     </div>
