erased sign in w 42 btn

--- a/frontend/service/components/signup/signup.html
+++ b/frontend/service/components/signup/signup.html
@@ -23,9 +23,9 @@
                     <input type="password" class="form-control ctm-form password-field" id="confirm-password" required autocomplete="new-password" maxlength="100">
                 </div>
                 <div class="d-flex justify-content-center">
-                    <button type="submit" class="btn ctm-btn" id="register">Register</button>
-                    <div class="text-center ctm-text-light p-1">or</div>
-                    <button type="submit" class="btn ctm-btn">Register with 42</button>
+                    <button type="submit" class="btn ctm-btn w-100" id="register">Register</button>
+                    <!-- <div class="text-center ctm-text-light p-1">or</div>
+                    <button type="submit" class="btn ctm-btn">Register with 42</button> -->
                 </div>
             </form>
             <div class="d-flex justify-content-center mt-3">
