--- a/frontend/service/components/home/home.html
+++ b/frontend/service/components/home/home.html
@@ -49,7 +49,7 @@
 							<div id="chess-friend-options" class="h-100 flex-column" style="display: none;">
 								<div id="chess-friend" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Play with a friend</div>
 								<div id="chess-random" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Play random</div>
-								<div id="chess-local" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Play local</div>
+								<!-- <div id="chess-local" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Play local</div> -->
 							</div>
 							<div id="chess-options" class="h-100 flex-column" style="display: none;">
 								<div id="classic-chess" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Classic</div>
